# geo1004.hw03

./: .gitignore
hw/03/: README.md  duplex.city.json
hw/03/cpp/: CMakeLists.txt  README.md
hw/03/cpp/include/: json.hpp
hw/03/cpp/src/: Structures.h  helpstructCGAL.h  main.cpp  writetojson.h
hw/03/data/: KIThouse.mtl  orient_weld_FZK.mtl  orient_weld_duplex.mtl
